infrastructure/kubernetes/ingress/step2/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: hello-world
            servicePort: 3030
